--- a/style.css
+++ b/style.css
@@ -301,3 +301,118 @@ footer p{
   width: 50px;
   height: 50px;
 }
+
+@media (max-width: 768px) {
+  section {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .left {
+    max-width: 100%;
+    order: 2; /* Moves text below image */
+    padding: 0;
+    text-align: center;
+  }
+
+  .right {
+    order: 1; /* Moves image above text */
+    width: 100%;
+    margin-top: 3rem;
+    padding: 3rem;
+  }
+  
+  .left h1, .left h1 span{
+    font-size: 2rem;
+  }
+
+  .left p{
+    font-size: 1rem;
+  }
+
+  #about{
+    flex-direction: column;
+    margin-top: 4rem;
+    padding: 0;
+  }
+  #aboutImage{
+    display: none;
+    
+  }
+  .content{
+    flex-direction: column;
+    text-align: center;
+    padding: 0;
+    height: 90vh;
+    width: 90%
+  }
+
+  .about-text-content{
+    justify-self: center;
+    width: 100%;
+  }
+
+  .about-text-content h1{
+    font-size: 1rem
+  }
+  
+  .info, .paragraph{
+    font-size: .8rem;
+  }
+
+  #skill{
+    padding: 0;
+    padding-bottom: 3rem;
+    margin-top: 4rem;
+    height: 100%;
+  }
+  #skill > div{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .skill-container{
+    width: 90%;
+  }
+
+  #contact{
+    height: 100%;
+    padding: 0;
+  }
+  .contact{
+    width: 100%;
+  }
+
+  .contact h1{
+    font-size: 1.5rem
+  }
+  .contact p{
+    font-size: .9rem;
+ 
+  }
+  .social{
+    padding: 10px;
+    margin: 0;
+  }
+
+  .icons img{
+    width: 25px;
+    height: 25px;
+  }
+
+  .icons a{
+    font-size: .7rem;
+  }
+  footer{
+    position: relative ;
+  }
+
+  footer p{
+    font-size: .5rem;
+  }
+
+  header a img{
+    display: none;
+  }
+}
